<resources>
    <string name="app_name">IFoodTruck</string>
    <string name="login">Entrar</string>
    <string name="signup">Cadastrar</string>
    <string name="tvLogin">Login</string>
    <string name="tvSenha">Senha</string>
    <string name="htLogin">Digite seu Login</string>
    <string name="htSenha">Entre com a sua Senha</string>
    <string name="btEntrar">Entrar</string>
    <string name="cadNomeEstabelecimento">Nome do Estabelecimento</string>
    <string name="cadEspecialidade">Especialidade</string>
    <string name="cadNomeProprietario">Nome do Proprietário</string>
    <string name="cadNomeUsuario">Nome de Uuario</string>
    <string name="cadSenha">Senha</string>
    <string name="cadConfirmaSenha">Confirmação de Senha</string>
    <string name="cadTermosUso">Eu concordo com os termos de uso</string>
    <string name="btnCadastras">Cadastrar</string>
    <string name="title_activity_tela_navigation">activity_tela_navigation</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="bsTitulo">Cadastro de Pratos</string>
    <string name="cadNomePrato">Nome Prato</string>
    <string name="cadDescricao">Descricao</string>
    <string name="cadPrecoPrato">Preco</string>
    <string name="btAddImagem">Adicionar Imagem</string>
    <string name="cadTelefone">Telefone</string>
    <string name="cadEndereco">Endereco</string>
    <string name="inputNomeEstabelecimento">exemploNomeEstabelecimento</string>
    <string name="inputEspecialidade">ExemploEspecialidade</string>
    <string name="inputNomeProprietario">ExemploNomeProprietario</string>
    <string name="inputEndereco">ExemploEndereco</string>
    <string name="inputTelefone">inputTelefone</string>
    <string name="cadComentario">Digite Seu Comentario</string>
    <string name="tvComentario">Comentarios</string>
    <string name="Search">Pesquisar</string>
    <string name="cadLogin">Login</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Cadastrar">Cadastrar</string>
    <string name="TelaCadastroEstabelecimento">Cadastro de Estabelecimento</string>
    <string name="messagemcadastrar">Cadastro Realizado com Sucesso</string>
    <string name="msgboasvndasx">Bem Vindo!</string>
    <string name="MsgDescricao">Esta é uma nova experiência de descoberta de FoodTrucks mais próximos de você!</string>
    <string name="lembraruser">Lembrar usuário</string>
    <string name="Filtrar">Filtrar</string>
    <string name="ListarFoodTrucks">Listar FoodTrucks</string>
    <string name="AtualizarDados">Atualizar Dados</string>
    <string name="CadastrarPratos">Cadastrar Pratos</string>
    <string name="ListarPratos">Listar Pratos</string>
    <string name="bsTituloAdm">MeuFoodTruck</string>
    <string name="bsTituloUser">FoodTruck</string>
    <string name="VisualizarPratos">Visualizar Pratos</string>
    <string name="EnviarComentario">Enviar Comentario</string>
    <string name="tpPreco">R$</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="Mapa">Ir para o Mapa</string>
    <string name="MensagemErro">Login Ou Senha Invalidos</string>
</resources>
