<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/lightGrey"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TelaAdm">

    <android.support.v7.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:title="@string/bsTituloAdm"
            app:titleTextColor="#FFFFFF"></android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tool_bar"
        android:layout_marginTop="0dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageAdm"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:src="@mipmap/ifood" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                        android:id="@+id/tvNomeEstabelecimento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/cadNomeEstabelecimento"
                        android:textColor="@color/colorSecondaryDark"
                        android:textSize="14sp"
                        android:textStyle="bold" android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/inputNomeEstabelecimento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/inputNomeEstabelecimento"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvEspecialidade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cadEspecialidade"
                    android:textColor="@color/colorSecondaryDark"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/inputEspecialidade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/inputEspecialidade"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

            </LinearLayout>


        </LinearLayout>


        <TextView
            android:id="@+id/cadNomeProprietario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/cadNomeProprietario"
            android:textColor="@color/colorSecondaryDark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/inputNomeProprietario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:text="@string/inputNomeProprietario"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/cadEndereco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/cadEndereco"
            android:textColor="@color/colorSecondaryDark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/inputEndereco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:text="@string/inputEndereco"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/cadTelefone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/cadTelefone"
            android:textColor="@color/colorSecondaryDark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/inputTelefone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:text="@string/inputTelefone"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorPrimary"
                    android:padding="20dp"
                    android:id="@+id/btnUpdate" android:text="@string/AtualizarDados"/>

            <Button
                    android:id="@+id/btcadastrarPratos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorSecondary"
                    android:padding="20dp"
                    android:text="@string/CadastrarPratos"/>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorSecondary"
                    android:padding="20dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/ListarPratos" android:id="@+id/btnlstpratos"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>