<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/lightGrey"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TelaUser">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tool_bar"
        android:orientation="vertical"
        android:scrollbars="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:title="@string/bsTitulo"
        app:titleTextColor="#FFFFFF"></android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tool_bar"
        android:layout_marginTop="0dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageAdm"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:srcCompat="@mipmap/ifood" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvNomeEstabelecimento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cadNomeEstabelecimento"
                    android:textColor="@color/colorSecondaryDark"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/inputNomeEstabelecimento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/inputNomeEstabelecimento"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvEspecialidade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cadEspecialidade"
                    android:textColor="@color/colorSecondaryDark"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/inputEspecialidade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/inputEspecialidade"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />
            </LinearLayout>


        </LinearLayout>


        <TextView
            android:id="@+id/cadNomeProprietario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/cadNomeProprietario"
            android:textColor="@color/colorSecondaryDark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/inputNomeProprietario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:text="@string/inputNomeProprietario"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/cadEndereco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/cadEndereco"
            android:textColor="@color/colorSecondaryDark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/inputEndereco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:text="@string/inputEndereco"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/cadTelefone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/cadTelefone"
            android:textColor="@color/colorSecondaryDark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/inputTelefone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:text="@string/inputTelefone"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <android.support.design.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorSecondary"
            android:padding="20dp"
            android:text="Visualizar Pratos" />

        <TextView
            android:id="@+id/cadComentario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/tvComentario"
            android:textColor="@color/colorSecondaryDark"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cadComentario"
            android:inputType="text" />

        <!--<android.support.design.widget.TextInputLayout-->
            <!--style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"-->
            <!--android:layout_width="match_parent"-->

            <!--android:layout_height="wrap_content">-->

            <!--<android.support.design.widget.TextInputEditText-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:hint="@string/cadComentario"-->
                <!--android:inputType="text"-->
                <!--android:textColorHint="@color/colorPrimary" />-->
        <!--</android.support.design.widget.TextInputLayout>-->

        <android.support.design.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorSecondary"
            android:padding="20dp"
            android:text="Enviar Comentario" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">


        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
</ScrollView>