<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login" android:background="@android:color/background_dark">

    <ImageView
            android:layout_width="380dp"
            android:layout_height="491dp" app:srcCompat="@mipmap/ifood" android:id="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/linearLayout3"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.0" android:scaleX="2"
            android:scaleY="2"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="200dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/linearLayout3"
    >


        <TextView
                android:text="@string/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView"
                android:textSize="20sp" android:textColor="@android:color/background_light" android:textStyle="bold"
                android:layout_marginLeft="25dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText" android:hint="@string/htLogin"
                android:background="@android:color/background_light" android:layout_marginLeft="25dp"
        />
        <TextView
                android:text="@string/tvSenha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView2" android:textSize="20sp"
                android:textColor="@android:color/background_light" android:textStyle="bold"
                android:layout_marginLeft="25dp" android:paddingTop="10dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText2" android:hint="@string/htSenha"
                android:background="@android:color/background_light" android:layout_marginLeft="25dp"
        />
        <android.support.design.button.MaterialButton
                android:layout_width="149dp"
                android:layout_height="37dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/btEntrar"
                app:backgroundTint="?attr/colorError"
                app:cornerRadius="10dp" tools:layout_editor_absoluteX="126dp" tools:layout_editor_absoluteY="171dp"
                android:textStyle="bold" android:layout_marginTop="30dp"/>
        <!--app:icon="@mipmap/login" app:iconPadding="@dimen/dimlogin"/>-->
    </LinearLayout>

</android.support.constraint.ConstraintLayout>