<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@color/lightGrey"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".MainActivity">
    <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:id="@+id/tool_bar"
            app:titleTextColor="#FFFFFF"
            app:title="Cadastro de Estabelecimento"></android.support.v7.widget.Toolbar>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@+id/tool_bar">
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cadNomeEstabelecimento"
                    android:textColorHint="@color/colorPrimary"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cadEspecialidade"
                    android:textColorHint="@color/colorPrimary"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cadNomeProprietario"
                    android:textColorHint="@color/colorPrimary"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cadSenha"
                    android:textColorHint="@color/colorPrimary"
                    android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background=""
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cadConfirmaSenha"
                    android:textColorHint="@color/colorPrimary"
                    android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Eu concordo com os Termos de Uso"
                android:layout_marginTop="25dp"
                android:textColor="@color/colorPrimaryDark"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp">
            <android.support.design.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="20dp"
                    android:layout_weight="1"
                    android:text="Cancelar"
                    android:backgroundTint="@color/colorPrimary"/>
            <android.support.design.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="20dp"
                    android:layout_weight="1"
                    android:text="Cadastrar"
                    android:backgroundTint="@color/colorSecondary"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>