<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appLogo">


            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:id="@+id/appLogo"
                    android:src="@mipmap/ifood"
                    android:scaleType="fitCenter"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="30dp"
                    />

            <RelativeLayout
                    android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/appLogo">


                <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_gravity="center_vertical">

                    <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/btnLogin"
                            android:text="@string/login"
                            android:backgroundTint="@color/colorSecondary"
                            android:layout_marginVertical="5dp"
                            android:layout_marginHorizontal="20dp"
                            android:padding="20dp"
                            android:textColorLink="@color/colorSecondaryDark"/>

                    <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/btnSignup"
                            android:text="@string/signup"
                            android:backgroundTint="@color/colorSecondary"
                            android:layout_marginVertical="5dp"
                            android:layout_marginHorizontal="20dp"
                            android:padding="20dp"/>

                    <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/btnSearch"
                            android:text="@string/Search"
                            android:backgroundTint="@color/colorSecondary"
                            android:layout_marginVertical="5dp"
                            android:layout_marginHorizontal="20dp"
                            android:padding="20dp"/>

                </LinearLayout>
            </RelativeLayout>
    </RelativeLayout>

 </ScrollView>